@@ -11,13 +11,12 @@ import com.liferay.dynamic.data.mapping.test.util.DDMFormValuesTestUtil;
 import com.liferay.petra.lang.CentralizedThreadLocal;
 import com.liferay.petra.string.StringPool;
 import com.liferay.portal.kernel.test.ReflectionTestUtil;
-import com.liferay.portal.kernel.util.DateFormatFactoryUtil;
+import com.liferay.portal.kernel.test.rule.NewEnv;
 import com.liferay.portal.kernel.util.FastDateFormatFactoryUtil;
 import com.liferay.portal.kernel.util.HashMapBuilder;
 import com.liferay.portal.kernel.util.LocaleThreadLocal;
 import com.liferay.portal.kernel.util.LocaleUtil;
 import com.liferay.portal.test.rule.LiferayUnitTestRule;
-import com.liferay.portal.util.DateFormatFactoryImpl;
 import com.liferay.portal.util.FastDateFormatFactoryImpl;
 
 import java.util.Locale;
@@ -33,6 +32,8 @@ import org.junit.Test;
 /**
  * @author Bruno Basto
  */
+@NewEnv(type = NewEnv.Type.JVM)
+@NewEnv.JVMArgsLine("-Djava.locale.providers=CLDR")
 public class DateDDMFormFieldValueRendererTest {
 
 	@ClassRule
@@ -42,7 +43,6 @@ public class DateDDMFormFieldValueRendererTest {
 
 	@BeforeClass
 	public static void setUpClass() {
-		setUpDateFormatFactoryUtil();
 		setUpFastDateFormatFactoryUtil();
 
 		ReflectionTestUtil.setFieldValue(
@@ -78,7 +78,7 @@ public class DateDDMFormFieldValueRendererTest {
 				).setExtension(
 					Locale.UNICODE_LOCALE_EXTENSION, "nu-arab"
 				).build(),
-				"٢٥/٠١/٢٠١٥"
+				"٢٥\u200F/٠١\u200F/٢٠١٥"
 			).put(
 				LocaleUtil.BRAZIL, "25/01/2015"
 			).put(
@@ -115,13 +115,13 @@ public class DateDDMFormFieldValueRendererTest {
 				).setExtension(
 					Locale.UNICODE_LOCALE_EXTENSION, "nu-arab"
 				).build(),
-				"٢٥/٠١/٢٠١٥ ٠١:٠٠ ص"
+				"٢٥\u200F/٠١\u200F/٢٠١٥ ٠١:٠٠ ص"
 			).put(
 				LocaleUtil.BRAZIL, "25/01/2015 01:00"
 			).put(
 				new Locale("ca", "ES"), "25/01/2015 01:00"
 			).put(
-				new Locale("fi", "FI"), "25.01.2015 01:00"
+				new Locale("fi", "FI"), "25.01.2015 01.00"
 			).put(
 				LocaleUtil.FRANCE, "25/01/2015 01:00"
 			).put(
@@ -158,13 +158,6 @@ public class DateDDMFormFieldValueRendererTest {
 		_assertRenderValues(
 			_getSingleValueExpectedValuesMap("01/25/2015 01:00 AM"),
 			"2015-01-25 1:00");
-	}
-
-	protected static void setUpDateFormatFactoryUtil() {
-		DateFormatFactoryUtil dateFormatFactoryUtil =
-			new DateFormatFactoryUtil();
-
-		dateFormatFactoryUtil.setDateFormatFactory(new DateFormatFactoryImpl());
 	}
 
 	protected static void setUpFastDateFormatFactoryUtil() {
